--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
+@font-face {
+    font-family: 'NexaText-Bold';
+    src: local('NexaText-Bold'), url(./fonts/NexaText-Blod.eot) format('ttf');
+}
 @tailwind utilities;
