--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Commerce Hogg</title>
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.js" defer></script>
-</head>
+@@include('./head.html')
 <body>
 <div class="flex flex-col min-h-screen false bg-gray-100">
     <div style="position:fixed;z-index:9999;top:16px;left:16px;right:16px;bottom:16px;pointer-events:none"></div>
@@ -65,38 +59,3 @@
         </div>
     </header>
     <main class="flex-1">
-
-<section class="bg-purple text-white px-3 md:px-0 py-8 lg:py-16">
-    <div class="container mx-auto">
-        <h1 class="text-4xl text-white font-featured">Welcome to Commerce Hogg.</h1>
-        <p class="mt-4 text-base sm:text-lg lg:text-xl text-indigo-100">
-            Methodical Full Stack Senior Magento Developer with an eye for detail.
-        </p>
-    </div>
-</section>
-<div class="container mx-auto grid items-center md:grid-cols-2 gap-24 sections-spacing px-3 md:px-0">
-
-</div>
-    </main>
-    <footer class="container mx-auto text-gray-600 mb-6 mt-8 sm:mt-16 text-sm px-3 lg:px-0">
-        <div class="w-full flex items-center justify-center space-x-3 mt-4 md:w-auto md:mt-0 md:ml-6"><a
-                aria-label="GitHub link"
-                href="https://github.com/mattwaler"
-                target="_blank"
-                rel="noopener"
-                class="w-5 h-5 text-gray-500">
-            <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
-                <path fill="currentColor"
-                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/>
-            </svg>
-        </a>
-        </div>
-        <div class="flex flex-wrap justify-center items-center mt-2 text-center">
-            <span>©&nbsp;2021 |&nbsp;</span>
-            <address>Commerce Hogg Ltd, 7 Bell Yard, London, WC2A 2JR</address>
-            <span>&nbsp;| Company Number: 13613079, Registered in England</span>
-        </div>
-    </footer>
-</div>
-</body>
-</html>
